tests/snapshots/parser_snapshots__assignments__empty_value.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"FOO=\")"
---
Assignment(
    Assignment {
        name: "FOO",
        value: Word {
            parts: [
                Literal(
                    "",
                ),
            ],
        },
    },
)
