tests/snapshots/parser_snapshots__assignments__with_command.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"FOO=bar cmd arg\")"
---
Simple(
    SimpleCommand {
        assignments: [
            Assignment {
                name: "FOO",
                value: Word {
                    parts: [
                        Literal(
                            "bar",
                        ),
                    ],
                },
            },
        ],
        words: [
            Word {
                parts: [
                    Literal(
                        "cmd",
                    ),
                ],
            },
            Word {
                parts: [
                    Literal(
                        "arg",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
